[package]
name = "dblb"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.7"
r2d2_sqlite = "0.12.0"
log = "0.4.8"
thiserror = "1.0.9"
rusqlite = "0.20.0"

[dev-dependencies]
env_logger = "0.7.1"
