[tool.poetry]
name = "dblb"
version = "0.1.0"
description = ""
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
databases = {extras = ["postgresql"], version = "^0.2.6"}
asyncpg = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
